Fix help and stats pages on mobile

--- a/pingle/src/App.css
+++ b/pingle/src/App.css
@@ -315,19 +315,19 @@ input:-moz-placeholder {
 }
 
 .help p {
-  font-size: 18px;
-  line-height: 19px;
-  margin: 7px 0;
+  font-size: 1.95vh;
+  line-height: 2vh;
+  margin: 0.5vh 0;
   text-align: center;
 }
 
 .help .hint-container {
   display: flex;
-  gap: 50px;
+  gap: 5vh;
   justify-content: center;
   align-items: center;
-  height: 10%;
-  margin: 10px 0;
+  height: 5vh;
+  margin: 1vh 0;
 }
 
 .help .hint {
@@ -335,15 +335,14 @@ input:-moz-placeholder {
   justify-content: center;
   align-items: center;
   border-radius: 10px;
-  line-height: 20px;
+  line-height: 4vh;
   text-align: center;
-  height: 100%;
 }
 
 .stats h2 {
-  font-size: 20px;
+  font-size: 2.25vh;
   font-weight: bold;
-  margin: 5px 0;
+  margin: 1vh 0;
   text-align: center;
   justify-content: center;
   display: flex;
@@ -358,11 +357,12 @@ input:-moz-placeholder {
 }
 
 .stats .stats-container {
-  height: 55%;
+  height: 35vh;
+  margin-bottom: 2vh;
 }
 
 .stats .stats-distribution {
-  height: 45%;
+  height: 25vh;
 }
 
 .stats .stat-item {
@@ -370,36 +370,36 @@ input:-moz-placeholder {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  font-size: 14px;
+  font-size: 1.5vh;
 
   border-radius: 10px;
   background-color: var(--green-primary);
-  width: 80%;
-  height: 13%;
-  margin: 5px;
+  width: 100%;
+  height: 14%;
+  margin: 0.5vh;
 
   box-sizing: border-box;
   overflow: hidden;
-  line-height: 20px;
+  line-height: 2vh;
   text-align: center;
   flex-shrink: 0;
 }
 
 .stats .stat-item .stat-label {
   font-weight: bold;
-  font-size: 15px;
+  font-size: 1.75vh;
 }
 
 .stats .stats-distribution {
-  margin-top: 10px;
+  margin-top: 1vh;
 }
 
 .stats .bar-item {
   display: flex;
   align-items: center;
   width: 100%;
-  height: 15%;
-  margin: 10px 0;
+  height: 10%;
+  margin: 1vh 0;
   box-sizing: border-box;
 }
 
@@ -412,12 +412,13 @@ input:-moz-placeholder {
   height: 100%;
   border-radius: 10px;
   background-color: var(--green-primary);
-  margin-left: 20px;
+  margin-left: 2vh;
+  font-size: 2vh;
 }
 
 .stats .bar-item .bar-value {
   justify-content: right;
-  margin-right: 10px;
+  margin-right: 1.25vh;
 }
 
 .stats .bar-item .bar-label,
